@@ -1,7 +1,7 @@
 /*
  * msstep.h - microstrip impedance step class definitions
  *
- * Copyright (C) 2004 Stefan Jahn <stefan@lkcc.org>
+ * Copyright (C) 2004, 2007 Stefan Jahn <stefan@lkcc.org>
  * Copyright (C) 2004 Michael Margraf <Michael.Margraf@alumni.TU-Berlin.DE>
  *
  * This is free software; you can redistribute it and/or modify
@@ -19,7 +19,7 @@
  * the Free Software Foundation, Inc., 51 Franklin Street - Fifth Floor,
  * Boston, MA 02110-1301, USA.
  *
- * $Id: msstep.h,v 1.5 2005-06-02 18:17:56 raimi Exp $
+ * $Id: msstep.h,v 1.6 2007-02-12 18:32:33 ela Exp $
  *
  */
 
@@ -34,6 +34,7 @@ class msstep : public circuit
   void initDC (void);
   void initAC (void);
   void calcAC (nr_double_t);
+  void initTR (void);
   matrix calcMatrixZ (nr_double_t);
 };
 
